--- a/wsitools/examples/wsi_preprocessing.ipynb
+++ b/wsitools/examples/wsi_preprocessing.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "source": [
     "# Download example image\n",
-    "we can download some example images from this site: https://openslide.cs.cmu.edu/download/openslide-testdata/"
+    "We can download some example images from this site: https://openslide.cs.cmu.edu/download/openslide-testdata/\n",
+    "Use the following code (or manually) to download the example image data."
    ],
    "metadata": {
     "collapsed": false
@@ -12,15 +13,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "('CMU-2.svs', <http.client.HTTPMessage at 0x7f5e70608820>)"
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "import urllib.request\n",
     "download_url = \"https://openslide.cs.cmu.edu/download/openslide-testdata/Aperio/CMU-2.svs\"\n",
     "urllib.request.urlretrieve(download_url, \"CMU-2.svs\")\n"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-07T15:05:36.486622200Z",
+     "start_time": "2024-10-07T15:04:53.582934900Z"
+    }
    }
   },
   {
@@ -46,6 +60,8 @@
     "num_processors = 20                     # Number of processes that can be running at once\n",
     "wsi_fn = \"./CMU-2.svs\"             # Define a sample image that can be read by OpenSlide\n",
     "output_dir = \"./patches\"    # Define an output directory\n",
+    "log_dir = \"./logs\"\n",
+    "\n",
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
@@ -58,7 +74,8 @@
     "    rescale_rate = 128,                        # Fold size to scale the thumbnail to (for faster processing)\n",
     "    patch_filter_by_area = 0.5,                # Amount of tissue that should be present in a patch\n",
     "    with_anno = True,                          # If true, you need to supply an additional XML file\n",
-    "    extract_layer = 0                          # OpenSlide Level\n",
+    "    extract_layer = 0,                          # OpenSlide Level\n",
+    "    log_dir=log_dir\n",
     "    )\n",
     "\n",
     "# Choose a method for detecting tissue in thumbnail image\n",
@@ -79,6 +96,34 @@
    "metadata": {
     "collapsed": false,
     "is_executing": true
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "## Show where the patches were extracted from"
+   ],
+   "metadata": {
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "import matplotlib.pyplot as plt\n",
+    "from PIL import Image\n",
+    "log_img_fn = os.listdir(log_dir)[0]\n",
+    "log_img = os.path.join(log_dir, log_img_fn)\n",
+    "img = Image.open(log_img)\n",
+    "plt.imshow(img)\n",
+    "plt.show()"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
@@ -121,7 +166,8 @@
     "    transformed.save(sv_fn)"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -144,7 +190,8 @@
     "model_sv = \"./CTransPath/ctranspath.pth\""
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -228,7 +275,8 @@
     "    np.savetxt(embeddings_csv, all_embeds, delimiter=\",\")"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   },
   {
@@ -247,7 +295,7 @@
    "source": [
     "import pandas as pd\n",
     "import umap\n",
-    "import matplotlib.pyplot as plt\n",
+    "\n",
     "import numpy as np\n",
     "\n",
     "df = pd.read_csv(embeddings_csv).astype(float)\n",
@@ -263,7 +311,8 @@
     "plt.show()"
    ],
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "is_executing": true
    }
   }
  ],
