--- a/wsitools/examples/wsi_preprocessing.ipynb
+++ b/wsitools/examples/wsi_preprocessing.ipynb
@@ -65,6 +65,8 @@
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
+    "if not os.path.exists(log_dir):\n",
+    "    os.makedirs(log_dir)\n",
     "# Define the parameters for Patch Extraction, including generating an thumbnail from which to traverse over to find\n",
     "# tissue.\n",
     "parameters = ExtractorParameters(output_dir, # Where the patches should be extracted to\n",
