--- a/wsitools/examples/wsi_preprocessing.ipynb
+++ b/wsitools/examples/wsi_preprocessing.ipynb
@@ -67,6 +67,8 @@
     "    os.makedirs(output_dir)\n",
     "if not os.path.exists(log_dir):\n",
     "    os.makedirs(log_dir)\n",
+    "print(log_dir)\n",
+    "print(output_dir)\n",
     "# Define the parameters for Patch Extraction, including generating an thumbnail from which to traverse over to find\n",
     "# tissue.\n",
     "parameters = ExtractorParameters(output_dir, # Where the patches should be extracted to\n",
