--- a/wsitools/examples/wsi_preprocessing.ipynb
+++ b/wsitools/examples/wsi_preprocessing.ipynb
@@ -49,26 +49,56 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "outputs": [],
+   "execution_count": 1,
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "./logs\n",
+      "./patches\n"
+     ]
+    }
+   ],
    "source": [
-    "from wsitools.tissue_detection.tissue_detector import TissueDetector\n",
-    "from wsitools.patch_extraction.patch_extractor import ExtractorParameters, PatchExtractor\n",
     "import os\n",
-    "\n",
-    "#Define some run parameters\n",
-    "num_processors = 20                     # Number of processes that can be running at once\n",
     "wsi_fn = \"./CMU-2.svs\"             # Define a sample image that can be read by OpenSlide\n",
     "output_dir = \"./patches\"    # Define an output directory\n",
     "log_dir = \"./logs\"\n",
-    "\n",
     "\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
     "if not os.path.exists(log_dir):\n",
     "    os.makedirs(log_dir)\n",
     "print(log_dir)\n",
-    "print(output_dir)\n",
+    "print(output_dir)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-10-07T15:41:47.609595300Z",
+     "start_time": "2024-10-07T15:41:47.608676300Z"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "2024-10-07 10:42:08.796734: I tensorflow/core/platform/cpu_feature_guard.cc:182] This TensorFlow binary is optimized to use available CPU instructions in performance-critical operations.\n",
+      "To enable the following instructions: AVX2 FMA, in other operations, rebuild TensorFlow with the appropriate compiler flags.\n",
+      "2024-10-07 10:42:09.890536: W tensorflow/compiler/tf2tensorrt/utils/py_utils.cc:38] TF-TRT Warning: Could not find TensorRT\n"
+     ]
+    }
+   ],
+   "source": [
+    "from wsitools.tissue_detection.tissue_detector import TissueDetector\n",
+    "from wsitools.patch_extraction.patch_extractor import ExtractorParameters, PatchExtractor\n",
+    "\n",
     "# Define the parameters for Patch Extraction, including generating an thumbnail from which to traverse over to find\n",
     "# tissue.\n",
     "parameters = ExtractorParameters(output_dir, # Where the patches should be extracted to\n",
@@ -99,7 +129,10 @@
    ],
    "metadata": {
     "collapsed": false,
-    "is_executing": true
+    "is_executing": true,
+    "ExecuteTime": {
+     "start_time": "2024-10-07T15:42:07.600124200Z"
+    }
    }
   },
   {
